# mei

./: .gitignore
Mei/: GenerateWaypoints.m  GittinsPlotter.m  SCRelay.m  SCRoundRobin.m  bernoulli_indices.mat  blah.txt  listener.cpp  listener.h  makefile  parseObservations.m  relay_waypoints.txt
Mei/src/: listener.cpp  parser.cpp  parser.h  serial.cpp  serial.h  talker.cpp
code/personal/mei/: CMakeLists.txt
code/personal/mei/missions/lab_06/: alpha.bhv  alpha.moos  bravo_loiter.bhv  bravo_loiter.moos  bravo_loiter_dbl.bhv  bravo_loiter_dbl.moos  bravo_loiter_uuv.bhv  bravo_loiter_uuv.moos  bravo_uuv_surface.bhv
code/personal/mei/missions/lab_07/alpha_pshare/: alpha.moos  alpha.moos++  bravo.bhv  bravo.moos  bravo.moos++  shoreside.moos++
code/personal/mei/missions/lab_07/distributed_tsp/: meta_shoreside.moos
code/personal/mei/missions/lab_07/henry_gilda_autorefuel/: meta_shoreside.moos
code/personal/mei/src/: CMakeLists.txt
code/personal/mei/src/lab_05/: CMakeLists.txt
code/personal/mei/src/lab_05/pCommunicationAngle/: CMakeLists.txt  CommunicationAngle.h  CommunicationAngle_Info.h  pCommunicationAngle.moos
code/personal/mei/src/pCommunicationAngle/: CMakeLists.txt  CommunicationAngle.cpp  CommunicationAngle.h  main.cpp  pCommunicationAngle.moos
code/personal/mei/src/pGenPath/: GenPath.cpp  GenPath.h  GenPath_Info.cpp  GenPath_Info.h
code/personal/mei/src/pOdometry/: Odometry.cpp  Odometry.h  Odometry_Info.cpp  Odometry_Info.h  main.cpp
code/personal/mei/src/pPointAssign/: PointAssign.cpp  PointAssign.h  PointAssign_Info.cpp  pPointAssign.moos
code/personal/mei/src/pPrimeFactor/: CMakeLists.txt  PrimeFactor.cpp  PrimeFactor.h  PrimeFactor_Info.cpp  PrimeFactor_Info.h  pPrimeFactor.moos
code/personal/mei/src/pPrimeFactorTester/: CMakeLists.txt  PrimeFactorTester.cpp
code/personal/mei/src/protobufExample/: CMakeLists.txt  protobufDCCLExample.cpp
code/personal/mei/src/simple_acomms_parser/: simple_acomms_parser_main.cpp
code/personal/mei/src/wtExample/: hello.cpp
exp-matlab/: bernoulli_coefficients.csv  gittins_parser.m  parseObservations.m
ivp-extend/: CMakeLists.txt
ivp-extend/mei/missions/lab_06/: bravo_uuv_surface.moos
ivp-extend/mei/missions/lab_07/alpha_pshare/: launch.sh  shoreside.moos
ivp-extend/mei/src/pGenPath/: main.cpp
ivp-extend/mei/src/pOdometry/: CMakeLists.txt  Odometry.cpp
ivp-extend/mei/src/pPrimeFactor/: PrimeFactor.h
ivp-extend/mei/src/pPrimeFactorTester/: PrimeFactorTester.h  PrimeFactorTester_Info.cpp
ivp-extend/mei/src/simple_acomms_parser/: CMakeLists.txt
ivp-extend/mei/src/wtExample/: CMakeLists.txt
ivp-extend/missions/lab_07/distributed_tsp/: meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos
ivp-extend/missions/lab_07_08/distributed_tsp/: launch.sh  meta_shoreside.moos  meta_vehicle.moos  plug_uFldNodeBroker.moos
ivp-extend/missions/lab_07_08/henry_gilda_autorefuel/: meta_vehicle.moos
ivp-extend/missions/lab_08/distributed_tsp_replan/: meta_vehicle.bhv
ivp-extend/missions/lab_13/final_mission/: launch.sh  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  plug_pMarinePID.moos  plug_pShare.moos  plug_uProcessWatch.moos  plug_uSimMarine.moos
ivp-extend/missions/lab_16/: .LastOpenedMOOSLogDirectory  meta_shoreside.moos  meta_shoreside.moos~  meta_vehicle.bhv  meta_vehicle.bhv~  meta_vehicle_fld_rtk.moos  meta_vehicle_sim.moos  meta_vehicle_sim.moos~  plug_pFrontEstimate.moos  plug_pFrontEstimate.moos~  plug_uFldCTDSensor.moos  plug_uTermCommand_Hover.moos  plug_uTermCommand_Hover.moos~  targ_KESTREL.bhv  targ_KESTREL.moos  targ_KESTREL.moos~  targ_SILVANA.bhv  targ_SILVANA.moos  targ_shoreside.moos
ivp-extend/missions/mobile_source/: meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle_fld_rtk.moos  meta_vehicle_sim.moos  plug_pShareS_AS.moos  plug_pShareV_SAS.moos
ivp-extend/missions/resources/config/: kestrel_options.def  kestrel_options.def~  silvana_options.def  silvana_options.def~
ivp-extend/missions/resources/plugs/: plug_pAckedCommsShoreside.moos  plug_pAcommsSimulator.moos  plug_pHelmIvP.moos  plug_pMarineViewer.moos  plug_pShareS.moos~  plug_pShareV.moos  plug_pShareV.moos~  plug_uTermCommand_Hover.moos
ivp-extend/missions/sas/: drivertester.moos  launch_shore.sh  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle_fld_rtk.moos  targ_shoreside.moos
ivp-extend/src/: CMakeLists.txt
ivp-extend/src/lab_05/pCommunicationAngle/: CommunicationAngle_Info.cpp
ivp-extend/src/lab_12/: Makefile  arithmetic.cpp  arithmetic.h  cmake_install.cmake
ivp-extend/src/lib_henrik_util/: Makefile  cmake_install.cmake
ivp-extend/src/pAcousticSource/: AcousticSource.cpp  AcousticSource.h  AcousticSource_Info.cpp  AcousticSource_Info.h  CMakeLists.txt  main.cpp  pAcousticSource.moos
ivp-extend/src/pFrontEstimate/: CMakeLists.txt  FrontEstimate.cpp  FrontEstimate.h  FrontEstimate_Info.cpp  FrontEstimate_Info.h  main.cpp  pFrontEstimate.moos
ivp-extend/src/pGenPath/: CMakeLists.txt  GenPath.cpp  GenPath.h  pGenPath.moos
ivp-extend/src/pHazardPath/: CMakeLists.txt  HazardPath.cpp  HazardPath.h  HazardPath_Info.cpp  HazardPath_Info.h  main.cpp  pHazardPath.moos
ivp-extend/src/pOdometry/: pOdometry.moos
ivp-extend/src/pPeriodicDrive/: CMakeLists.txt  PeriodicDrive.cpp  PeriodicDrive.h  PeriodicDrive_Info.cpp  PeriodicDrive_Info.h  main.cpp  pPeriodicDrive.moos
ivp-extend/src/pPeriodicDriver/: CMakeLists.txt  PeriodicDriver.cpp  PeriodicDriver.h  PeriodicDriver_Info.cpp  PeriodicDriver_Info.h  main.cpp  pPeriodicDriver.moos
ivp-extend/src/pPointAssign/: CMakeLists.txt  PointAssign_Info.h  main.cpp
ivp-extend/src/pPrimeFactor/: main.cpp  pPrimeFactor.moos
ivp-extend/src/pPrimeFactorTester/: PrimeFactorTester_Info.h  main.cpp  pPrimeFactorTester.moos
ivp-extend/src/protobuf/: CMakeLists.txt  Hazard.proto  Measurement.proto
ivp-extend/src/protobufExample/: CMakeLists.txt  protobufDCCLExample.cpp  protobufExample.cpp
ivp-extend/src/uFldHazardMgrX/: CMakeLists.txt  HazardMgrX.cpp  HazardMgrX.h  main.cpp
scripts/: cc_hybrid.mat
